# app/Models/User.php
@@ -6,17 +6,13 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
 {
     /** @use HasFactory<\Database\Factories\UserFactory> */
-    use HasFactory, Notifiable;
+    use HasApiTokens, HasFactory, Notifiable;
 
-    /**
-     * The attributes that are mass assignable.
-     *
-     * @var list<string>
-     */
     protected $table = 'user';
     protected $primaryKey = 'id_user';
 
@@ -26,28 +22,51 @@ class User extends Authenticatable
         'email',
         'password',
         'role',
+        'membership',
     ];
 
-    /**
-     * The attributes that should be hidden for serialization.
-     *
-     * @var list<string>
-     */
     protected $hidden = [
         'password',
         'remember_token',
     ];
 
-    /**
-     * Get the attributes that should be cast.
-     *
-     * @return array<string, string>
-     */
     protected function casts(): array
     {
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
         ];
+    }
+
+
+    public function isAdmin()
+    {
+        return $this->role === 'admin';
+    }
+
+    public function isPenulis()
+    {
+        return $this->role === 'penulis';
+    }
+
+    public function isPembaca()
+    {
+        return $this->role === 'pembaca';
+    }
+
+
+    public function isGuest()
+    {
+        return $this->membership === 'guest';
+    }
+
+    public function isFree()
+    {
+        return $this->membership === 'free';
+    }
+
+    public function isPremium()
+    {
+        return $this->membership === 'premium';
     }
 }
